debugging flickering speed issues realted to slider

--- a/src/themes/btk/less/btk.less
+++ b/src/themes/btk/less/btk.less
@@ -17,6 +17,9 @@ Dependencies
   Temporary Home Page Stylings
 ===
 */
+.home .main-slider .bx-wrapper img{
+	min-width:100%;
+}
 .home-article{
 	border-bottom:3px solid #000;
 	
@@ -36,15 +39,16 @@ Dependencies
 			padding: .25em .5em;
 			position:relative;
 			margin-left:1em;
+			border-radius:2px 0 0 2px;
 			&:before{
 			  content: "•";
 			  position: absolute;
 			  width: 0;
 			  height: 0;
 			  color: #fff;
-			  border-top: .95em solid transparent;
+			  border-top: .9em solid transparent;
 			  border-right: 1em solid #000;
-			  border-bottom: .95em solid transparent;
+			  border-bottom: .9em solid transparent;
 			  top: 0;
 			  left: -0.9em;
 			  text-align: center;
@@ -120,6 +124,8 @@ Header
 
 #header-box {
 	position:fixed; left:0; width:100%; z-index:10;
+	// fix for chrome "fixed" flicker
+	-webkit-backface-visibility:hidden; -webkit-transform: translateZ(0);
 	background:@headerbkgcolor; margin-bottom:25px;
 	&.open { .open-menu(); }
 
